--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -28,6 +28,20 @@
     color: #248acc;
 }
 
+/* banner giới thiệu */
+.carousel-inner img {
+    width: 100%; 
+    height: 400px; 
+    object-fit: cover;
+}
+
+.carousel-caption{
+    position: absolute;
+    font-weight: bold;
+    bottom: -30px;
+}
+/* kết thúc banner giới thiệu */
+
 /* ===================== */
 /* vé khuyển mãi trang chủ index.html */
 
@@ -92,10 +106,10 @@
 }
 
 .box-flasksale-right {
-    background-color: #ff4081;
+    background-color: #5ae7de;
     color: white;
-    padding: 10px;
-    border-radius: 8px;
+    padding: 0;
+    border-radius: 10px;
 }
 /* hết phần countdown flasksale */
 
