--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,29 +29,30 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img
-                src="https://res.cloudinary.com/devtqlbho/image/upload/v1732290311/iuaopzbrpugrk6b3aujd.jpg"
+                src="https://res.cloudinary.com/devtqlbho/image/upload/v1733156440/3_qjevsp.jpg"
                 alt="Los Angeles" class="d-block w-100">
             <div class="carousel-caption">
-                <h3>Los Angeles</h3>
-                <p>We had such a great time in 1!</p>
+                <h3 class="mb-0">Oasia Hotel</h3>
+                <p>Cùng nhau lưu giữ từng khoảnh khắc trong cuộc sống.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img
-                src="https://res.cloudinary.com/devtqlbho/image/upload/v1732283514/samples/landscapes/landscape-panorama.jpg"
+                src="https://res.cloudinary.com/devtqlbho/image/upload/v1733156440/8_nslfrl.webp"
                 alt="Chicago" class="d-block w-100">
             <div class="carousel-caption">
-                <h3>Los Angeles</h3>
-                <p>We had such a great time in 2!</p>
+                <h3 class="mb-0">Oasia Hotel</h3>
+                <p>Nơi sự hài lòng của khách hàng là triết lý.
+                </p>
             </div>
         </div>
         <div class="carousel-item">
             <img
-                src="https://res.cloudinary.com/devtqlbho/image/upload/v1732283520/samples/coffee.jpg"
+                src="https://res.cloudinary.com/devtqlbho/image/upload/v1733156440/1_tbkifr.jpg"
                 alt="New York" class="d-block w-100">
-            <div class="carousel-caption">
-                <h3>Los Angeles</h3>
-                <p>We had such a great time in 3!</p>
+            <div class="carousel-caption" style="color:#27e4e0">
+                <h3 class="mb-0">Oasia Hotel</h3>
+                <p>Làm cho kỳ nghỉ của bạn thật đáng nhớ.</p>
             </div>
         </div>
     </div>
@@ -318,13 +319,14 @@
             </div>
         </div>
         <div class="col-md-3">
-            <div class="container box-flasksale-right">
-                <ul style="list-style-type: none; text-align: center;">
-                    <li>kết thúc ngày 30/12/2024</li>
-                    <li>lúc 00:00:00 </li>
-                    <li>Đang diễn ra <i class="fa-solid fa-fire fa-shake"
-                            style="color: #f79a18;"></i></li>
-                </ul>
+            <div class="container">
+                <div class="box-flasksale-right" ><ul style="list-style-type: none; text-align: center;" class="p-0 mb-0">
+                        <li>kết thúc ngày 30/12/2024</li>
+                        <li>lúc 00:00:00 </li>
+                        <li>Đang diễn ra <i class="fa-solid fa-fire fa-shake"
+                                style="color: #f79a18;"></i></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -344,13 +346,20 @@
                 </p>
                 <p class="card-text mb-0">Loại phòng: VIP</p>
                 <div>
-                    <span style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i class="fa-solid fa-umbrella" style="color: #09d396;"></i> 9.2</span>
+                    <span
+                        style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i
+                            class="fa-solid fa-umbrella"
+                            style="color: #09d396;"></i> 9.2</span>
                     <span>Tuyệt vời</span>
                     <span>(255 đánh giá)</span>
                 </div>
-                <div style="display: flex; flex-direction: column; align-items: flex-end;">
-                    <span style=" text-decoration: line-through;">1,000,000 đ</span>
-                    <span style="color: rgb(229, 62, 62); font-size: 24px;" >700,000 đ</span>
+                <div
+                    style="display: flex; flex-direction: column; align-items: flex-end;">
+                    <span style=" text-decoration: line-through;">1,000,000
+                        đ</span>
+                    <span
+                        style="color: rgb(229, 62, 62); font-size: 24px;">700,000
+                        đ</span>
                 </div>
             </div>
         </div>
@@ -368,13 +377,20 @@
                 </p>
                 <p class="card-text mb-0">Loại phòng: VIP</p>
                 <div>
-                    <span style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i class="fa-solid fa-umbrella" style="color: #09d396;"></i> 9.2</span>
+                    <span
+                        style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i
+                            class="fa-solid fa-umbrella"
+                            style="color: #09d396;"></i> 9.2</span>
                     <span>Tuyệt vời</span>
                     <span>(255 đánh giá)</span>
                 </div>
-                <div style="display: flex; flex-direction: column; align-items: flex-end;">
-                    <span style=" text-decoration: line-through;">1,000,000 đ</span>
-                    <span style="color: rgb(229, 62, 62); font-size: 24px;" >700,000 đ</span>
+                <div
+                    style="display: flex; flex-direction: column; align-items: flex-end;">
+                    <span style=" text-decoration: line-through;">1,000,000
+                        đ</span>
+                    <span
+                        style="color: rgb(229, 62, 62); font-size: 24px;">700,000
+                        đ</span>
                 </div>
             </div>
         </div>
@@ -392,13 +408,20 @@
                 </p>
                 <p class="card-text mb-0">Loại phòng: VIP</p>
                 <div>
-                    <span style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i class="fa-solid fa-umbrella" style="color: #09d396;"></i> 9.2</span>
+                    <span
+                        style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i
+                            class="fa-solid fa-umbrella"
+                            style="color: #09d396;"></i> 9.2</span>
                     <span>Tuyệt vời</span>
                     <span>(255 đánh giá)</span>
                 </div>
-                <div style="display: flex; flex-direction: column; align-items: flex-end;">
-                    <span style=" text-decoration: line-through;">1,000,000 đ</span>
-                    <span style="color: rgb(229, 62, 62); font-size: 24px;" >700,000 đ</span>
+                <div
+                    style="display: flex; flex-direction: column; align-items: flex-end;">
+                    <span style=" text-decoration: line-through;">1,000,000
+                        đ</span>
+                    <span
+                        style="color: rgb(229, 62, 62); font-size: 24px;">700,000
+                        đ</span>
                 </div>
             </div>
         </div>
@@ -416,13 +439,20 @@
                 </p>
                 <p class="card-text mb-0">Loại phòng: VIP</p>
                 <div>
-                    <span style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i class="fa-solid fa-umbrella" style="color: #09d396;"></i> 9.2</span>
+                    <span
+                        style="background-color: #feebef; color: #f43a6b; border-radius: 5    px;"><i
+                            class="fa-solid fa-umbrella"
+                            style="color: #09d396;"></i> 9.2</span>
                     <span>Tuyệt vời</span>
                     <span>(255 đánh giá)</span>
                 </div>
-                <div style="display: flex; flex-direction: column; align-items: flex-end;">
-                    <span style=" text-decoration: line-through;">1,000,000 đ</span>
-                    <span style="color: rgb(229, 62, 62); font-size: 24px;" >700,000 đ</span>
+                <div
+                    style="display: flex; flex-direction: column; align-items: flex-end;">
+                    <span style=" text-decoration: line-through;">1,000,000
+                        đ</span>
+                    <span
+                        style="color: rgb(229, 62, 62); font-size: 24px;">700,000
+                        đ</span>
                 </div>
             </div>
         </div>
