--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -12,7 +12,7 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Booking</a>
+          <a class="nav-link" href="{{ url_for('booking') }}">Booking</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="#">Vip</a>
